--- a/models/templates/navbar.html
+++ b/models/templates/navbar.html
@@ -1,4 +1,7 @@
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+	<a class="navbar-brand" href="mybits.html">
+		<img src="../favicon.ico" width="45" height="45" alt="" loading="lazy">
+  </a>
     <div class="">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
